--- a/.gitignore
+++ b/.gitignore
@@ -208,9 +208,12 @@ __marimo__/
 
 # ===== 以下は自分用の追記 =====
 # データ・結果関連は git 管理しない
-evaluate_data/
-new_dataset/
+datasets/
+bfg.jar/
 results/
+food-grasping-uncertainty.git/
+food-grasping-uncertainty.git.bfg-report/
+
 
 # ===== Jupyter の自動生成ファイルを無視 =====
 .ipynb_checkpoints/
