--- a/environment.yml
+++ b/environment.yml
@@ -9,10 +9,11 @@ dependencies:
   - torchvision=0.16.0
   - torchaudio=2.1.0
   - pytorch-cuda=12.1  
-  - jupyter
   - jupyterlab
   - ipykernel
   - pip
   - pip:
       - opencv-python
       - tqdm
+      - matplotlib
+      - numpy
