--- a/environment.yml
+++ b/environment.yml
@@ -8,12 +8,12 @@ dependencies:
   - pytorch=2.1.0
   - torchvision=0.16.0
   - torchaudio=2.1.0
-  - pytorch-cuda=12.1  
+  - pytorch-cuda=12.1
   - jupyterlab
   - ipykernel
+  - numpy=1.22.2       
   - pip
   - pip:
       - opencv-python
       - tqdm
       - matplotlib
-      - numpy
